--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "foldor",
-  "main": "src/app/electron.js",
+  "main": "public/electron.js",
   "version": "1.0.0",
   "private": true,
   "description": "Foldor",
+  "homepage": "./",
   "repository": {
     "type": "git",
     "url": ""
@@ -25,32 +26,12 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.1"
   },
-  "keywords": [
-    "rest",
-    "hateoas",
-    "spring",
-    "data",
-    "react"
-  ],
   "scripts": {
-    "start": "electron .",
-    "start react": "react-scripts start",
-    "build": "webpack --mode production --config ./webpack.prod.js",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "watch": "webpack --watch -d --output src/app/bundle.js",
-    "pack": "electron-builder",
-    "dist": "electron-builder"
-  },
-  "build": {
-    "appId": "folder",
-    "files": [
-      "build/**/*",
-      "node_modules/**/*"
-    ],
-    "directories":{
-      "buildResources": "assets"
-    }
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
+    "start-electron": "electron .",
+    "electron-builder": "electron-builder --publish=always"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -74,6 +55,7 @@
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.2",
     "electron-builder": "^22.7.0",
+    "react-app-rewired": "^2.1.6",
     "webpack": "^4.19.1",
     "webpack-cli": "^3.1.0",
     "electron": "^9.0.5"
